--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-modal": "^3.16.2",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
