--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.22",
     "@mui/joy": "^5.0.0-beta.13",
+    "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-modal": "^3.16.2",
