--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
